@@ -4,7 +4,7 @@
    <meta charset="utf-8">
 </head>
 <body>
-<div style="width:230px;">Bypass Paywalls v1.3.11 by Adam
+<div style="width:230px;">Bypass Paywalls v1.4.0 by Adam
 <a href="options.html">Options</a></div>
 </body>
 </html>
