@@ -1,5 +1,6 @@
 Updates--
 
+2018-10-18 v1.4.0: Fixed cookie removal bug (medium.com should work properly now)
 2018-10-06 v1.3.11: Removed dn.se, fixed haaretz.co.il, fixed thestar.com
 2018-10-02 v1.3.10: Added The Advocate (theadvocate.com.au), added Examiner (examiner.com.au)
 2018-09-09 v1.3.9: Added japantimes.co.jp
